--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <!-- Hidden PayPal form -->
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypalForm">
                 <input type="hidden" name="cmd" value="_s-xclick">
-                <input type="hidden" name="hosted_button_id" value="Z5Q3MEQA9NJ88">
+                <input type="hidden" name="hosted_button_id" value="U9HU89946HT8C">
                 <input type="hidden" name="currency_code" value="USD">
             </form>
             <!-- Button linked to PayPal -->
