--- a/index.html
+++ b/index.html
@@ -127,11 +127,12 @@
             <p>Get access to 100GB of high-quality content, with monthly updates and priority support.</p>
             <p class="price">$3</p>
             <!-- Hidden PayPal form -->
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypalForm">
-                <input type="hidden" name="cmd" value="_s-xclick">
-                <input type="hidden" name="hosted_button_id" value="U9HU89946HT8C">
-                <input type="hidden" name="currency_code" value="USD">
-            </form>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_s-xclick" />
+  <input type="hidden" name="hosted_button_id" value="U9HU89946HT8C" />
+  <input type="hidden" name="currency_code" value="USD" />
+  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" title="O PayPal é a forma fácil e segura de pagar suas compras on-line." alt="Comprar agora" />
+</form>
             <!-- Button linked to PayPal -->
             <button class="btn" onclick="document.getElementById('paypalForm').submit()">Buy Now</button>
         </div>
