--- a/index.html
+++ b/index.html
@@ -125,25 +125,34 @@
         <div class="tile">
             <h2>Basic Plan</h2>
             <p>Get access to 100GB of high-quality content, with monthly updates and priority support.</p>
-            <p class="price">$3</p>
+            <p class="price">$5</p>
             <!-- Hidden PayPal form -->
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-  <input type="hidden" name="cmd" value="_s-xclick" />
-  <input type="hidden" name="hosted_button_id" value="U9HU89946HT8C" />
-  <input type="hidden" name="currency_code" value="USD" />
-</form>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypalFormBasic">
+                <input type="hidden" name="cmd" value="_s-xclick">
+                <input type="hidden" name="hosted_button_id" value="Z5Q3MEQA9NJ88">
+                <input type="hidden" name="currency_code" value="USD">
+            </form>
             <!-- Button linked to PayPal -->
-            <button class="btn" onclick="document.getElementById('paypalForm').submit()">Buy Now</button>
+            <button class="btn" onclick="document.getElementById('paypalFormBasic').submit()">Buy Now</button>
         </div>
+
         <div class="tile">
             <h2>Standard Plan</h2>
             <p>Enjoy 500GB of exclusive content, premium updates, and dedicated support.</p>
-            <p class="price">$10</p>
-            <a href="#" class="btn">Buy Now</a>
+            <p class="price">$5</p>
+            <!-- Hidden PayPal form for Standard Plan -->
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypalFormStandard">
+                <input type="hidden" name="cmd" value="_s-xclick">
+                <input type="hidden" name="hosted_button_id" value="C4QANVKEGKM5C">
+                <input type="hidden" name="currency_code" value="USD">
+            </form>
+            <!-- Button linked to PayPal -->
+            <button class="btn" onclick="document.getElementById('paypalFormStandard').submit()">Buy Now</button>
         </div>
+
         <div class="tile">
             <h2>Premium Plan</h2>
-            <p>Access over 1TB of premium content, updated weekly, with 24/7 VIP support.</p>
+            <p>Access over 2TB of premium content, updated weekly, with 24/7 VIP support.</p>
             <p class="price">$20</p>
             <a href="#" class="btn">Buy Now</a>
         </div>
