--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Service Plans</title>
+    <title>Premium Service Packs</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
@@ -123,9 +123,9 @@
 <main>
     <div class="container">
         <div class="tile">
-            <h2>Basic Plan</h2>
-            <p>Get access to 100GB of high-quality content, with monthly updates and priority support.</p>
-            <p class="price">$5</p>
+            <h2>Basic Pack</h2>
+            <p>Get access to 100GB of high-quality content, with photos and videos.</p>
+            <p class="price">$3</p>
             <!-- Hidden PayPal form -->
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypalFormBasic">
                 <input type="hidden" name="cmd" value="_s-xclick">
@@ -137,8 +137,8 @@
         </div>
 
         <div class="tile">
-            <h2>Standard Plan</h2>
-            <p>Enjoy 500GB of exclusive content, premium updates, and dedicated support.</p>
+            <h2>Standard Pack</h2>
+            <p>Enjoy 500GB of exclusive content, including r4pe and incest.</p>
             <p class="price">$5</p>
             <!-- Hidden PayPal form for Standard Plan -->
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypalFormStandard">
@@ -151,9 +151,14 @@
         </div>
 
         <div class="tile">
-            <h2>Premium Plan</h2>
-            <p>Access over 2TB of premium content, updated weekly, with 24/7 VIP support.</p>
-            <p class="price">$20</p>
+            <h2>Premium Pack</h2>
+            <p>Access over 2TB of premium content,including lxli,incest brother sister, boy, gay and more.</p>
+            <p class="price">$8</p>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypalFormStandard">
+                <input type="hidden" name="cmd" value="_s-xclick">
+                <input type="hidden" name="hosted_button_id" value="XCXF52VAHDHJQ">
+                <input type="hidden" name="currency_code" value="USD">
+            </form>
             <a href="#" class="btn">Buy Now</a>
         </div>
     </div>
