--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <input type="hidden" name="hosted_button_id" value="XCXF52VAHDHJQ">
                 <input type="hidden" name="currency_code" value="USD">
             </form>
-            <a href="#" class="btn">Buy Now</a>
+             <button class="btn" onclick="document.getElementById('paypalFormBasic').submit()">Buy Now</button>
         </div>
     </div>
 </main>
