--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
             <h2>Premium Pack</h2>
             <p>Access over 2TB of premium content,including lxli,incest brother sister, boy, gay and more.</p>
             <p class="price">$8</p>
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypalFormStandard">
-                <input type="hidden" name="cmd" value="_s-xclick">
-                <input type="hidden" name="hosted_button_id" value="XCXF52VAHDHJQ">
-                <input type="hidden" name="currency_code" value="USD">
-            </form>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_s-xclick" />
+  <input type="hidden" name="hosted_button_id" value="XCXF52VAHDHJQ" />
+  <input type="hidden" name="currency_code" value="USD" />
+</form>
              <button class="btn" onclick="document.getElementById('paypalFormBasic').submit()">Buy Now</button>
         </div>
     </div>
