--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             <p class="price">$3</p>
             <!-- Hidden PayPal form -->
             <form action="https://www.paypal.com/donate" method="post" target="_top">
+                <input type="hidden" name="cmd" value="_s-xclick">
                 <input type="hidden" name="business" value="EXJY54QGZJMR2" />
                 <input type="hidden" name="amount" value="3" />
                 <input type="hidden" name="no_recurring" value="1" />
