--- a/index.html
+++ b/index.html
@@ -127,13 +127,11 @@
             <p>Get access to 100GB of high-quality content, with photos and videos.</p>
             <p class="price">$3</p>
             <!-- Hidden PayPal form -->
-            <form action="https://www.paypal.com/donate" method="post" target="_top">
-               <input type="hidden" name="business" value="EXJY54QGZJMR2" />
-               <input type="hidden" name="amount" value="3" />
-               <input type="hidden" name="no_recurring" value="1" />
-               <input type="hidden" name="currency_code" value="USD" />
-            </form>
-            <!-- Button linked to PayPal -->
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+              <input type="hidden" name="cmd" value="_s-xclick" />
+              <input type="hidden" name="hosted_button_id" value="U9HU89946HT8C" />
+              <input type="hidden" name="currency_code" value="USD" />
+              <!-- Button linked to PayPal -->
             <button class="btn" onclick="document.getElementById('paypalFormBasic').submit()">Buy Now</button>
         </div>
 
