--- a/index.html
+++ b/index.html
@@ -131,9 +131,12 @@
               <input type="hidden" name="cmd" value="_s-xclick" />
               <input type="hidden" name="hosted_button_id" value="U9HU89946HT8C" />
               <input type="hidden" name="currency_code" value="USD" />
-              </form>
-             <button class="btn" onclick="document.getElementById('paypalFormBasic').submit()">Buy Now</button>
+              <!-- Button linked to PayPal -->
+              <input type="submit" class="btn" value="Buy Now" />
+            </form>
         </div>
+    </div>
+</main>
 
     <div class="tile">
             <h2>Standard Pack</h2>
