--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 30px;
+            justify-items: center; /* Centraliza as colunas */
         }
         .tile {
             background-color: white;
@@ -43,6 +44,8 @@
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
             text-align: center;
             transition: transform 0.4s ease-in-out, box-shadow 0.4s ease;
+            width: 100%; /* Garante que o bloco ocupe a largura total disponível */
+            max-width: 350px; /* Limita a largura máxima dos blocos */
         }
         .tile:hover {
             transform: translateY(-10px);
@@ -135,10 +138,8 @@
               <input type="submit" class="btn" value="Buy Now" />
             </form>
         </div>
-    </div>
-</main>
 
-    <div class="tile">
+        <div class="tile">
             <h2>Standard Pack</h2>
             <p>Enjoy 500GB of exclusive content, including r4pe and incest.</p>
             <p class="price">$5</p>
@@ -149,7 +150,7 @@
                <input type="hidden" name="currency_code" value="USD">
             </form>
             <!-- Button linked to PayPal -->
-            <button class="btn" onclick="document.getElementById('paypalFormStandard').submit()">Buy Now</button>
+            <input type="submit" class="btn" value="Buy Now" />
         </div>
 
         <div class="tile">
@@ -163,7 +164,7 @@
                 <input type="hidden" name="currency_code" value="USD" />
             </form>
             <!-- Button linked to PayPal -->
-            <button class="btn" onclick="document.getElementById('paypalFormPremium').submit()">Buy Now</button>
+            <input type="submit" class="btn" value="Buy Now" />
         </div>
     </div>
 </main>
