--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                <input type="hidden" name="currency_code" value="USD">
             </form>
             <!-- Button linked to PayPal -->
-            <input type="submit" class="btn" value="Buy Now" />
+            <button class="btn" onclick="document.getElementById('paypalFormStandard').submit()">Buy Now</button>
         </div>
 
         <div class="tile">
@@ -164,7 +164,7 @@
                 <input type="hidden" name="currency_code" value="USD" />
             </form>
             <!-- Button linked to PayPal -->
-            <input type="submit" class="btn" value="Buy Now" />
+            <button class="btn" onclick="document.getElementById('paypalFormPremium').submit()">Buy Now</button>
         </div>
     </div>
 </main>
